
	* gtk/general/Gtk.hs: export new Editable module.

	* gtk/buttons/Button.chs, gtk/menuComboToolbar/CheckMenuItem.chs,
	gtk/misc/Calendar.chs, gtk/misc/EventBox.chs, gtk/misc/HandleBox.chs
	gtk/entry/HScale, gtk/entry/VScale, gtk/ornaments/Frame.chs,
	gtk/treeList/CellRendererToggle.chs: add missing functions.

	* gtk/general/Structs.hsc: remove unneeded CheckMenuItem function.

2004-07-29  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/general/General.chs: don't use depreciated gtk main loop
	functions to install timout and idle handlers, use glib equivalents.

	* demo/filechooser/Makefile: FileChooserDemo.glade in EXTRA_TARFILES.

	* gtk/abstract/FileChooser.chs: instance FileChooserError GErrorClass

	* gtk2hs/gtk/abstract/Box.chs, gtk/misc/Adjustment.chs,
	gtk/layout/Alignment.chs: implement missing functions

	* tools/apicoverage/Makefile, tools/apicoverage/Exclude.hs,
	tools/apicoverage/gtk.ignore, tools/apicoverage/README: new tool to
	check on our coverage of the gtk api.

2004-07-28  Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile: only build filechooser demo with gtk-2.4

	* demo/filechooser/FileChooserDemo.glade: add demo's glade file

2004-07-28  Jens Petersen  <petersen@haskell.org>

	* demo/glade/Makefile (EXTRA_TARFILES): Include simple.glade.

	* mk/common.mk: Define INST_HIDIR, INST_LIBDIR, INST_INCLDIR and
	INST_BINDIR directly as normal make variables, so that lib
	packages get installed in separate subdirs.

2004-07-27  Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/gconf/GConfDemo.hs, demo/gconf/Makefile: new gconf demo/test

	* Makefile: build gconf demo

2004-07-27  Jens Petersen  <petersen@haskell.org>

	* mk/config.mk.in: Define ABS_TOP.  No longer define CPP.

	* mk/common.mk: Sedpipe ABS_TOP and use it for TARDIR to fix
	tarsource target. 

	* glade/Makefile: Use TOP.  Generate GladeType.chs with the same
	invocation used by sourceview and gtk.

	* doc/Makefile: Use common.mk and EXTRA_TARFILES, drop own