@@ -1,0 +1,4 @@
+
+#deprecated button box functions
+exclude gtk_[hv]button_box_[gs]et_spacing_default
+exclude gtk_[hv]button_box_[gs]et_layout_default
