@@ -1,0 +1,10 @@
+
+#for GtkAdjustment, these manually emit a signal. This is only useful if
+#one modifies values in the object other than the value and we do not
+#provide any way of doing that so ignore these functions.
+
+exclude gtk_adjustment_changed
+exclude gtk_adjustment_value_changed
+
+#as of 2.4 deprecated
+exclude gtk_calendar_display_options
